<resources>
    <string name="app_name">NanoTale</string>
    <string name="action_settings">Settings</string>
    <string name="no_nt_present">No Nanotales present, yet!</string>
    <string name="cd_write_nanotale">Write a new nanotale.</string>
    <string name="discard_btn">YES</string>
    <string name="save_file_cancel">Cancel</string>
    <string name="cd_dont_discard_nt">Keep the current Nanotale.</string>
    <string name="discard_file">Discard NanoTale?</string>
    <string name="cd_discard_nt_ques">Do you want to discard this nanotale?</string>
    <string name="cd_discard_nt_consent">Discard the Nanotale.</string>
    <string name="cd_edit_nanotale">Edit current Nanotale</string>
    <string name="cd_nt_text_align_left">Left align nanotale text.</string>
    <string name="cd_nt_text_align_center">Center align nanotale text.</string>
    <string name="cd_nt_text_align_right">Right align nanotale text.</string>
    <string name="cd_change_background_color">Change background color.</string>
    <string name="cd_change_text_alignment">Change text alignment.</string>
    <string name="cd_change_font_color">Change font color.</string>
    <string name="cd_save_nt">Save nanotale to disk.</string>
    <string name="edit_nanotale">Edit Tale</string>
    <string name="cd_share_nt">Share nanotale.</string>
    <string name="cd_modify_nt">Modify nanotale.</string>
    <string name="cd_delete_nt">Delete nanotale.</string>
    <string name="cd_composition_done">Finish Composition</string>
    <string name="cd_author">Enter Author\'s name.</string>
    <string name="author">Author</string>
    <string name="cd_tale_error">Error in tale</string>
    <string name="cd_tale_charcount">Wordcount</string>
    <string name="nt_input_initial_story_charcount">0/160</string>
    <string name="compose">Compose</string>
    <string name="cd_tale">Enter the tale</string>
    <string name="tale">Story</string>
    <string name="cd_widget">Start writing nanotales.</string>
    <string name="cd_file_name">Enter file name for nanotale.</string>
    <string name="save_file_input_msg">File </string>
    <string name="cd_dont_save_file">Cancel saving of nanotale.</string>
    <string name="cd_save_file">Saving nanotale.</string>
    <string name="save_file_continue">Save</string>
    <string name="cd_empty_file_name">Please enter a new file name.</string>
    <string name="intent_share_to">Share To</string>
    <string name="color_white">#FFFFFF</string>
    <string name="color_black">#000000</string>
</resources>
