<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_gravity="center"
    android:layout_margin="@dimen/save_file_dialog_margin"
    card_view:cardCornerRadius="@dimen/card_view_corner_radius"
    card_view:cardElevation="@dimen/card_view_corner_radius"
    card_view:contentPadding="@dimen/gen_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/save_as_draft_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/cd_discard_nt_ques"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/gen_padding"
            android:paddingEnd="@dimen/gen_padding"
            android:text="@string/discard_file"
            android:textSize="@dimen/tale_text_size" />

        <LinearLayout
            android:id="@+id/save_file_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end|center_vertical">

            <Button
                android:id="@+id/cancel_discard_nt_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cd_dont_discard_nt"
                android:text="@string/save_file_cancel"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/author_text_size" />

            <Button
                android:id="@+id/discard_nt_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cd_discard_nt_consent"
                android:text="@string/discard_btn"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/author_text_size" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
