<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="@dimen/save_file_dialog_margin"
    card_view:cardCornerRadius="@dimen/card_view_corner_radius"
    card_view:contentPadding="@dimen/gen_padding"
    card_view:cardElevation="@dimen/card_view_corner_radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <LinearLayout
            android:id="@+id/save_file_input_text"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_file_name"
                android:layout_gravity="center"
                android:paddingEnd="@dimen/gen_padding"
                android:paddingStart="@dimen/gen_padding"
                android:text="@string/save_file_input_msg"
                android:textSize="@dimen/tale_text_size"/>

            <EditText
                android:id="@+id/save_file_filename_input"
                android:layout_width="0dp"
                android:padding="@dimen/gen_padding"
                android:textSize="@dimen/tale_text_size"
                android:layout_gravity="center_vertical"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/save_file_edit_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_below="@id/save_file_input_text"
            android:id="@+id/save_file_buttons"
            android:orientation="horizontal"
            android:gravity="end|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/cancel_discard_nt_btn"
                android:layout_width="wrap_content"
                android:textSize="@dimen/author_text_size"
                android:textColor="@color/colorPrimaryDark"
                android:contentDescription="@string/cd_dont_save_file"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/save_file_cancel"/>

            <Button
                android:id="@+id/save_nt_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/author_text_size"
                android:contentDescription="@string/cd_save_file"
                android:textColor="@color/colorPrimary"
                android:background="@android:color/transparent"
                android:text="@string/save_file_continue"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/file_error_icon"
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="@dimen/gen_padding"
            android:contentDescription="@string/cd_empty_file_name"
            android:src="@drawable/ic_error_outline_red"
            android:layout_width="@dimen/error_imageview_width"
            android:layout_height="@dimen/error_imageview_height"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>
