<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="?actionBarSize">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:gravity="center_vertical|start"
                android:padding="@dimen/gen_padding"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/tale_text_size" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_activity_background">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/saved_nt_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/no_saved_nt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/gen_padding"
            android:gravity="top|center_horizontal"
            android:text="@string/no_nt_present"
            android:textSize="@dimen/tale_text_size"
            android:visibility="gone"
            tools:text="No NanoTales present, yet!"/>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingButton"
            android:layout_width="@dimen/fab_edge_length"
            android:layout_height="@dimen/fab_edge_length"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/cd_write_nanotale"
            android:onClick="writeNanoTale"
            android:src="@drawable/ic_add_white"
            app:elevation="@dimen/fab_elevation" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>